<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.practicle.techflitter.presentation.detail.UserDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/profile" />

        <TextView
            android:id="@+id/txt_title_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/bg_edit_text"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:lines="1"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.onNameChanged(text)}"
            android:padding="@dimen/dimen_12dp"
            android:text="@{viewModel.user.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_name" />

        <TextView
            android:id="@+id/txt_title_email"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/bg_edit_text"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.onEmailChanged(text)}"
            android:padding="@dimen/dimen_12dp"
            android:text="@{viewModel.user.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_email" />

        <TextView
            android:id="@+id/txt_title_gender"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/radio_group_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radio_group_gender" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:onCheckedChanged="@{(view, id)->viewModel.onGenderChanged(view, id)}"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/radio_group_status"
            app:layout_constraintTop_toBottomOf="@+id/edt_email">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{viewModel.user.isMale()}"
                android:text="@string/male" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_weight="1"
                android:checked="@{viewModel.user.isFemale()}"
                android:text="@string/female" />

        </RadioGroup>

        <TextView
            android:id="@+id/txt_title_status"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/radio_group_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radio_group_status" />

        <RadioGroup
            android:id="@+id/radio_group_status"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:onCheckedChanged="@{(view, id)->viewModel.onStatusChanged(view, id)}"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_gender">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{viewModel.user.isActive()}"
                android:text="@string/active" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_inactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_weight="1"
                android:checked="@{viewModel.user.isInactive()}"
                android:text="@string/inactive" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:background="@color/teal_700"
            android:onClick="@{()->viewModel.onSubmit()}"
            android:text="@{@string/create}"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/create" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>