<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.practicle.techflitter.domain.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line"
        android:padding="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@{model.name}"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_email"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_email"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@{model.email}"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txt_title_email"
            tools:text="@string/email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_gender"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@{model.gender.toUpperCase()}"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txt_title_gender"
            tools:text="@string/gender" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_status"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_gender" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@{model.status.toUpperCase()}"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txt_title_status"
            tools:text="@string/status" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>